# NeuroTrALE-data-manager

./: Dockerfile  LICENSE  README.md  SPDX.spdx  pyproject.toml  requirements.txt
src/neurotrale-precomputed/: models.py  neurotrale_precomputed_service.py
support-files/: entrypoint.sh
